--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
         </div>
 
         <div>
-            <input type="checkbox" id="showStatistics">
-            <label for="showStatistics">Show statistics</label>
+            <label for="orderBy">Order by:</label>
+            <select id="orderBy">
+                <option value="date">Date</option>
+                <option value="rating">Rating</option>
+                <option value="relevance">Relevance</option>
+                <option value="title">Title</option>
+                <option value="viewCount">View count</option>
+            </select>
         </div>
 
         <div class="form-group">
-            <input type="submit" class="btn btn-danger" value="Search">
+            <input type="submit" class="btn btn-danger match-parent" value="Search">
         </div>
     </form>
 
